# ComfyUI_SenseNova_U1

./: README.md  SenseNova_node.py  __init__.py  node_utils.py  pyproject.toml  requirements.txt
SenseNova/: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_CN.md  layer_streaming.py  pyproject.toml
SenseNova-U1-8B-MoT-SFT/: config.json  model.safetensors.index.json
SenseNova/.github/: CONTRIBUTING.md
SenseNova/.github/workflows/: ruff.yml
SenseNova/docs/: deployment.md  deployment_CN.md  inference_infra.md  inference_infra_CN.md  installation.md  installation_CN.md  prompt_enhancement.md  showcases.md  showcases_CN.md
SenseNova/docs/assets/showcases/: .gitkeep
SenseNova/evaluation/: README.md  README_CN.md
SenseNova/evaluation/docs/: image_generation.md  interleaved.md  understanding.md
SenseNova/evaluation/easi/: GUIDE.md  README.md
SenseNova/evaluation/easi/config/: sensenova_models.py
SenseNova/evaluation/easi/patches/: easi_sensenova_config.patch
SenseNova/evaluation/easi/scripts/: download_weights.sh  lb.py  serve.sh  serve_lb.sh  setup.sh
SenseNova/evaluation/understanding/: config.yaml  es.py
SenseNova/examples/: README.md  README_CN.md  utils.py
SenseNova/examples/editing/: inference.py  inference_.py  resize_inputs.py
SenseNova/examples/interleave/: inference.py  run.sh
SenseNova/examples/serving/: client.py
SenseNova/examples/t2i/: inference _.py  inference.py
SenseNova/examples/vqa/: inference.py
SenseNova/src/sensenova_u1/: __init__.py
example_workflows/: sensenova.json
(+35 files in other folders)
