[project]
name = "sensenova_u1"
description = "SenseNova-U1: Unifying Multimodal Understanding and Generation with NEO-Unify Architecture"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "diffusers", "torchvision", "transformers # < 4.58.0", "accelerate", "tqdm", "gguf", "tokenizers"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_SenseNova_U1"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_SenseNova_U1"
Icon = ""
includes = []
